2013-07-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Avoid discarding pending changes when catalogue is updated.

	* src/guimain.h (IDD_CONFIRMATION): New manifest constant; define it.
	(AppWindowMaker::ConfirmActionDialogue): New static method; declare it.
	(AppWindowMaker::ConfirmActionRequest): New method; declare it.

	* src/guimain.rc (IDD_CONFIRMATION): Implement new dialogue template.

	* src/guiexec.cpp (pkgConfirmAction, pkgConfirmActionClient): New
	static variables; they are used as pseudo-arguments, together with...
	(DIALOGUE_DISPATCH, DIALOGUE_RESPONSE, DIALOGUE_CHKSTATE): ...these
	new macros; define them; they facilitate the implementation of...
	(AppWindowMaker::ConfirmActionDialogue): ...this; implement it.
	(AppWindowMaker::ConfirmActionRequest): Implement it; use it...
	(AppWindowMaker::OnCommand) [IDM_REPO_UPDATE]: ...here, and...

	* src/pkgdata.cpp (AppWindowMaker::OnClose): ...here.

2013-07-26  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Make a minor GUI layout adjustment.

	* src/pkgview.cpp (VSASH_INIT_POS): Increment from 0.30 to 0.35; this
	sets the initial height of the package list pane to be 35% of the main
	window height, which, at the default initial window size, neatly fits
	the entire "Basic Setup" package group, without scrolling, on my
	1366x768 pixel Win7-VM display.

2013-07-25  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Implement setup tool installer "plugin".

	* src/setup.h (SETUP_HOOK_RUN_INSTALLER): Define request code.

	* src/dllhook.cpp (run_basic_system_installer): Implement handler...
	(setup_hook) [SETUP_HOOK_RUN_INSTALLER]: ...and invoke it.
	(setup_hook) [default]: Collect diagnostics in common message digest.
	(AppWindowMaker::SetupHookInvoked): Define and initialise it; in this
	context, which does not conflict with prior definition in guimain.exe,
	it must always remain true.

	* src/setup.cpp (SetupTool) [constructor]: Invoke...